k8s/00-namespace.yaml
# Namespace dedicado para aislar todos los recursos de QuickEats en el clúster.
apiVersion: v1
kind: Namespace
metadata:
  name: quickeats
