k8s/restaurant.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restaurant-service
  namespace: quickeats
spec:
  replicas: 1
  selector:
    matchLabels:
      app: restaurant-service
  template:
    metadata:
      labels:
        app: restaurant-service
    spec:
      containers:
        - name: restaurant-service
          image: quickeats-restaurant-service:latest
          imagePullPolicy: IfNotPresent
          command: ["node", "dist/main.js"]
          ports:
            - containerPort: 3003
---
apiVersion: v1
kind: Service
metadata:
  name: restaurant-service
  namespace: quickeats
spec:
  selector:
    app: restaurant-service
  ports:
    - port: 3003
      targetPort: 3003
  type: ClusterIP
